style: alignment issue

--- a/components/block/timeline/timeline.module.scss
+++ b/components/block/timeline/timeline.module.scss
@@ -9,7 +9,7 @@
 }
 
 .line {
-	@apply w-screen h-px absolute bottom-44 z-0 border-dashed border-t-4 border-contrast-400;
+	@apply w-screen h-px absolute bottom-52 z-0 border-dashed border-t-4 border-contrast-400;
 }
 
 .wrapper {
